more work on other pages and css

--- a/input_resources.html
+++ b/input_resources.html
@@ -6,7 +6,6 @@
         <title>Input Resources</title>
     </head>
     <body>
-        <div class="header-img"></div>
         <div class="topnav">
             <a href="#home">HOME</a>
             <a href="#resources">RESOURCES</a>
@@ -22,7 +21,8 @@
                     </button>
                 </form>
             </div>
-        </div>
+        </div><br><br><br>
+        <div class="header-img"></div>
         <h1>Upload Resources</h1>
         <form action="form" method="get">
             Resource Name: <input type="text" name="name"> <br><br>
