--- a/resources.html
+++ b/resources.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link href = "resources_style.css" rel = "stylesheet"/>
+    <link href = "input_style.css" rel = "stylesheet"/>
     <head>
         <meta charset="UTF-8">
         <title>Resources</title>
     </head>
     <body>
-        <div class="header-img"></div>
         <div class="topnav">
             <a href="#home">HOME</a>
             <a href="#resources">RESOURCES</a>
@@ -22,7 +21,8 @@
                     </button>
                 </form>
             </div>
-        </div>
+        </div><br><br><br>
+        <div class="header-img"></div>
         <h1>Resources</h1>
         something something:
         </br>
